tests/error/struct_errors/invalid_attribute_assign3.err
Guppy compilation failed. Error in file $FILE:15

13:    @guppy(module)
14:    def foo(s: MyStruct) -> None:
15:        s.x, a = (1, 2), 3
           ^^^
GuppyTypeError: Cannot assign expression of type `(int, int)` to field with type `int`
